# virtualizer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: adapter_sim.rs  basic.rs
src/: lib.rs
virtualizer/: Cargo.toml  README.md
virtualizer-adapter/: Cargo.toml  README.md
virtualizer-adapter/examples/: anchor_prepend.rs  controller_tween.rs
virtualizer-adapter/src/: anchor.rs  controller.rs  key.rs  lib.rs  tests.rs  tween.rs
virtualizer/examples/: README.md  adapter_sim.rs  basic.rs  dynamic_measurement.rs  keyed_reorder.rs  measurement_cache.rs  pinned_headers.rs  tween_scroll.rs
virtualizer/src/: emitter.rs  fenwick.rs  key.rs  lib.rs  macros.rs  options.rs  state.rs  tests.rs  types.rs  virtualizer.rs
